[package]
name = "rust-threads"
version = "0.0.1"
authors = ["thorstenschindler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.11.0"
cid = "0.6.1"
serde_json = "1.0"
serde = "1.0"
futures = "0.3.14"
tokio = { version = "1.5", features = ["full"] }